[tool.poetry]
name = "interalpha"
version = "0.1.0"
description = ""
authors = ["Tomas Gavenciak <gavento@gmail.com>"]
packages = [
    { include = "interalpha" },
]

[tool.poetry.dependencies]
python = "^3.7"
setuptools = "^49.3.0"
tensorflow = "^2.3.0"
colorlog = "^4.2.1"
matplotlib = "^3.3.0"
plotly = "^4.9.0"

[tool.poetry.dev-dependencies]
ipython = "^7.17.0"
pytest = "^6.0.1"
black = "^19.10b0"
virtualenv = "^20.0.30"

[tool.poetry.scripts]
iacli = 'cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

